--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,7 @@ body {
   border-bottom: 1px solid black;
   display: flex;
   align-items: center;
+  height: 50px;
 }
 .menu a {
   margin: 0 5px 0 5px;
@@ -79,6 +80,10 @@ a {
   color: black;
   text-decoration: underline;
   font-size: 20px;
+}
+
+#desktopLinks a {
+  display: none;
 }
 
 @-webkit-keyframes fromLeftToRight {
@@ -132,5 +137,19 @@ a {
           animation: rightToLeft 0.3s ease;
 }
 
+/*NAVBAR */
+@media screen and (min-width: 700px) {
+  #burger {
+    display: none;
+  }
+  #desktopLinks {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  #desktopLinks a {
+    display: inline;
+  }
+}
 /* TABLETS */
 /* DESKTOP *//*# sourceMappingURL=main.css.map */
