--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,8 @@ body {
   max-width: 650px;
   max-height: 500px;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 200px;
+  margin-bottom: 400px;
 }
 
 .description,
@@ -84,6 +85,63 @@ a {
 
 #desktopLinks a {
   display: none;
+}
+
+footer {
+  margin-top: 10%;
+  height: 400px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2117647059);
+  display: flex;
+  gap: 50px;
+}
+footer ul li {
+  list-style: none;
+}
+footer ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+.footerLinks {
+  width: 60%;
+}
+.footerLinks h2 {
+  font-size: 25px;
+  font-weight: 200;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2078431373);
+}
+.footerLinks li {
+  margin-top: 10%;
+}
+
+li:hover {
+  transition: 100ms;
+  scale: 103%;
+}
+
+li:hover > a {
+  text-decoration: underline;
+}
+
+.contactOptions {
+  height: 100%;
+}
+.contactOptions .footerSoMe {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  gap: 20px;
+}
+.contactOptions .footerSoMe img:hover {
+  transition: 200ms;
+  scale: 130%;
+}
+.contactOptions .footerSoMe figure {
+  margin: 0 0 0 5%;
+}
+.contactOptions .footerSoMe img {
+  width: 30px;
 }
 
 @-webkit-keyframes fromLeftToRight {
@@ -137,7 +195,7 @@ a {
           animation: rightToLeft 0.3s ease;
 }
 
-/*NAVBAR */
+/*Tablet and upwards */
 @media screen and (min-width: 700px) {
   #burger {
     display: none;
@@ -150,6 +208,43 @@ a {
   #desktopLinks a {
     display: inline;
   }
-}
-/* TABLETS */
-/* DESKTOP *//*# sourceMappingURL=main.css.map */
+  footer {
+    display: flex;
+    justify-content: center;
+    height: 200px;
+  }
+  .footerLinks {
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+  }
+  .footerLinks h2 {
+    font-size: 25px;
+    font-weight: 200;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2078431373);
+  }
+  .footerLinks li {
+    margin-top: 10%;
+  }
+  .contactOptions {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  .contactOptions .footerSoMe {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+  }
+  .contactOptions .footerSoMe img:hover {
+    transition: 200ms;
+    scale: 130%;
+  }
+  .contactOptions .footerSoMe figure {
+    margin: 0 0 0 5%;
+  }
+  .contactOptions .footerSoMe img {
+    width: 30px;
+  }
+}/*# sourceMappingURL=main.css.map */
