--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,7 +38,8 @@ body {
 	max-width: 650px;
 	max-height: 500px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 200px;
+	margin-bottom: 400px;
 }
 
 .description,
@@ -91,6 +92,65 @@ a {
 	}
 }
 
+//footer
+
+footer {
+	margin-top: 10%;
+	height: 400px;
+	border-top: 1px solid #00000036;
+	display: flex;
+	gap: 50px;
+	ul {
+		li {
+			list-style: none;
+			a {
+				text-decoration: none;
+				color: black;
+			}
+		}
+	}
+}
+.footerLinks {
+	width: 60%;
+	h2 {
+		font-size: 25px;
+		font-weight: 200;
+		border-bottom: 1px solid #00000035;
+	}
+	li {
+		margin-top: 10%;
+	}
+}
+li:hover {
+	transition: 100ms;
+	scale: (103%);
+}
+
+li:hover > a {
+	text-decoration: underline;
+}
+
+.contactOptions {
+	height: 100%;
+	.footerSoMe {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		justify-content: center;
+		gap: 20px;
+		img:hover {
+			transition: 200ms;
+			scale: (130%);
+		}
+		figure {
+			margin: 0 0 0 5%;
+		}
+		img {
+			width: 30px;
+		}
+	}
+}
+
 //Keyframes
 @keyframes fromLeftToRight {
 	0% {
@@ -124,7 +184,7 @@ a {
 
 //Media Queries
 
-/*NAVBAR */
+/*Tablet and upwards */
 @media screen and (min-width: 700px) {
 	#burger {
 		display: none;
@@ -138,14 +198,44 @@ a {
 			display: inline;
 		}
 	}
-}
+	footer {
+		display: flex;
+		justify-content: center;
+		height: 200px;
+	}
+	.footerLinks {
+		display: flex;
+		justify-content: center;
+		gap: 10%;
+		h2 {
+			font-size: 25px;
+			font-weight: 200;
+			border-bottom: 1px solid #00000035;
+		}
+		li {
+			margin-top: 10%;
+		}
+	}
 
-/* TABLETS */
-@media screen and (min-width: 700px) and (max-width: 1199px) {
-
-}
-
-/* DESKTOP */
-@media screen and (min-width: 1200px) {
-
+	.contactOptions {
+		display: flex;
+		align-items: center;
+		height: 100%;
+		.footerSoMe {
+			display: flex;
+			flex-direction: row;
+			gap: 10px;
+			align-items: center;
+			img:hover {
+				transition: 200ms;
+				scale: (130%);
+			}
+			figure {
+				margin: 0 0 0 5%;
+			}
+			img {
+				width: 30px;
+			}
+		}
+	}
 }
